// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages searchOperator should render an error when errors are passed through 1`] = `
<Component
  description="Search Operators page for the Fares Data Build Tool"
  title="Search Operators - Fares Data Build Tool"
>
  <CsrfForm
    action="/api/searchOperators"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Search requires a minimum of three characters",
            "id": "search-input",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <fieldset
        aria-describedby="operator-search"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
            id="operator-search"
          >
            Search for the operators that the ticket covers
          </h1>
        </legend>
        <span
          className="govuk-error-message"
          id="search-input-error"
        >
          <span
            className="govuk-visually-hidden"
          >
            Error: 
          </span>
          Search requires a minimum of three characters
        </span>
        <label
          className="govuk-label"
          htmlFor="search-input"
        >
          Operator name
        </label>
        <input
          className="govuk-input govuk-!-width-three-quarters govuk-input--error"
          id="search-input"
          name="searchText"
          type="text"
        />
        <input
          className="govuk-button govuk-!-margin-left-5"
          id="search-button"
          type="submit"
          value="Search"
        />
      </fieldset>
    </div>
  </CsrfForm>
</Component>
`;

exports[`pages searchOperator should render the page correctly with search results 1`] = `
<Component
  description="Search Operators page for the Fares Data Build Tool"
  title="Search Operators - Fares Data Build Tool"
>
  <CsrfForm
    action="/api/searchOperators"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group "
    >
      <fieldset
        aria-describedby="operator-search"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
            id="operator-search"
          >
            Search for the operators that the ticket covers
          </h1>
        </legend>
        <label
          className="govuk-label"
          htmlFor="search-input"
        >
          Operator name
        </label>
        <input
          className="govuk-input govuk-!-width-three-quarters"
          id="search-input"
          name="searchText"
          type="text"
        />
        <input
          className="govuk-button govuk-!-margin-left-5"
          id="search-button"
          type="submit"
          value="Search"
        />
      </fieldset>
    </div>
    <div
      className="govuk-form-group "
    >
      <fieldset
        aria-describedby="operator-search-results"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend"
          id="operator-search-results"
        >
          <p
            className="govuk-body-l govuk-!-margin-bottom-0"
          >
            Your search for 
            <strong />
             returned
            <strong>
               
              1
               result(s)
            </strong>
          </p>
        </legend>
        <FormElementWrapper
          errorClass=""
          errorId="checkbox-0"
          errors={Array []}
        >
          <div
            className="govuk-checkboxes"
          >
            <p
              className="govuk-hint"
              id="operator-hint-text"
            >
              Select the operators results and click add operator(s). This data is taken from the Traveline National Dataset.
            </p>
            <div
              className="govuk-checkboxes__item"
              key="checkbox-item-Blackpool"
            >
              <input
                className="govuk-checkboxes__input"
                id="checkbox-0"
                name="Blackpool"
                type="checkbox"
                value="BLAC#Blackpool"
              />
              <label
                className="govuk-label govuk-checkboxes__label"
                htmlFor="checkbox-0"
              >
                Blackpool
              </label>
            </div>
          </div>
          <div
            className="govuk-!-margin-top-7"
          >
            <input
              className="govuk-button govuk-button--secondary"
              id="add-operator-button"
              type="submit"
              value="Add Operator(s)"
            />
          </div>
          <div>
            <input
              className="govuk-button"
              id="continue-button"
              type="submit"
              value="Continue"
            />
          </div>
        </FormElementWrapper>
      </fieldset>
    </div>
  </CsrfForm>
</Component>
`;

exports[`pages searchOperator should render the page correctly without search results 1`] = `
<Component
  description="Search Operators page for the Fares Data Build Tool"
  title="Search Operators - Fares Data Build Tool"
>
  <CsrfForm
    action="/api/searchOperators"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group "
    >
      <fieldset
        aria-describedby="operator-search"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
            id="operator-search"
          >
            Search for the operators that the ticket covers
          </h1>
        </legend>
        <label
          className="govuk-label"
          htmlFor="search-input"
        >
          Operator name
        </label>
        <input
          className="govuk-input govuk-!-width-three-quarters"
          id="search-input"
          name="searchText"
          type="text"
        />
        <input
          className="govuk-button govuk-!-margin-left-5"
          id="search-button"
          type="submit"
          value="Search"
        />
      </fieldset>
    </div>
  </CsrfForm>
</Component>
`;
